# amp-protocol

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
amp/: __init__.py  memory_object.py  schema_v0.1.json
amp/embed/: engine.py
amp/server/: http_server.py  mcp_server.py
amp/store/: bm25.py  memory_store.py  pgvector_backend.py  sqlite_backend.py
amp/sync/: protocol.py
docs/: SPEC.md
scripts/: init_db.sql  launch.sh
sdk/typescript/: package.json
sdk/typescript/src/: index.ts
tests/: test_v3.py
